deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-07-17T06:57:42Z"
  generation: 1
  name: java-app
  namespace: my-ns
  resourceVersion: "100132"
  uid: 9470f155-e372-494f-befc-1da8757a64a6
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: java-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-app
    spec:
      containers:
      - image: himalaya7087/java-image
        imagePullPolicy: Always
        name: java-container
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: data-volume  # Name of the volume
          mountPath: /data   # Mount path in the container
      volumes:
        - name: data-volume  # Name of the volume
          persistentVolumeClaim:
            claimName: data-pvc  # Name of the PVC defined in Step 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2024-07-17T06:57:52Z"
    lastUpdateTime: "2024-07-17T06:57:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-07-17T06:57:42Z"
    lastUpdateTime: "2024-07-17T06:57:52Z"
    message: ReplicaSet "java-app-5998f75989" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
